syntax = "proto3";

package provisioning.v1;

option go_package = "github.com/azure/azure-dev/cli/azd/pkg/azdext";

// Request and response messages for each Provider method

message NameRequest {}
message NameResponse {
  string name = 1;
}

message InitializeRequest {
  string project_path = 1;
  ProvisioningOptions options = 2;
}
message InitializeResponse {
  bool success = 1;
  string error_message = 2;
}

message StateRequest {
  ProvisioningStateOptions options = 1;
}
message StateResponse {
  ProvisioningStateResult state_result = 1;
  string error_message = 2;
}

message DeployRequest {}
message DeployProgress {
  string message = 1;
}
message DeployResultResponse {
  ProvisioningDeployResult result = 1;
  string error_message = 2;
}

message PreviewRequest {}
message PreviewProgress {
  string message = 1;
}
message PreviewResultResponse {
  ProvisioningDeployPreviewResult result = 1;
  string error_message = 2;
}

message DestroyRequest {
  ProvisioningDestroyOptions options = 1;
}
message DestroyProgress {
  string message = 1;
}
message DestroyResultResponse {
  ProvisioningDestroyResult result = 1;
  string error_message = 2;
}

message EnsureEnvRequest {}
message EnsureEnvResponse {
  bool success = 1;
  string error_message = 2;
}

message ParametersRequest {}
message ParametersResponse {
  repeated ProvisioningParameter parameters = 1;
  string error_message = 2;
}

// Core types (simplified for proto)
message ProvisioningOptions {
  string provider = 1;
  string path = 2;
  string module = 3;
  map<string, string> deployment_stacks = 4;
  bool ignore_deployment_state = 5;
}

message ProvisioningStateOptions {
  // Add fields as needed
}

message ProvisioningStateResult {
  // Add fields as needed
}

message ProvisioningDeployResult {
  // Add fields as needed
}

message ProvisioningDeployPreviewResult {
  // Add fields as needed
}

message ProvisioningDestroyOptions {
  // Add fields as needed
}

message ProvisioningDestroyResult {
  repeated string invalidated_env_keys = 1;
}

message ProvisioningParameter {
  string name = 1;
  bool secret = 2;
  string value = 3;
  repeated string env_var_mapping = 4;
  bool local_prompt = 5;
  bool using_env_var_mapping = 6;
}

message RegisterProviderRequest {
  string name = 1; // unique identifier for the provider
  string display_name = 2;
}

message RegisterProviderResponse {
  // Add fields as needed (empty for now)
}

// Envelope for all possible provisioning messages (requests and responses)
message ProvisioningMessage {
  string request_id = 1;
  oneof message_type {
    RegisterProviderRequest register_provider_request = 2;
    RegisterProviderResponse register_provider_response = 3;
    NameRequest name_request = 4;
    NameResponse name_response = 5;
    InitializeRequest initialize_request = 6;
    InitializeResponse initialize_response = 7;
    StateRequest state_request = 8;
    StateResponse state_response = 9;
    DeployRequest deploy_request = 10;
    DeployProgress deploy_progress = 11;
    DeployResultResponse deploy_result = 12;
    PreviewRequest preview_request = 13;
    PreviewProgress preview_progress = 14;
    PreviewResultResponse preview_result = 15;
    DestroyRequest destroy_request = 16;
    DestroyProgress destroy_progress = 17;
    DestroyResultResponse destroy_result = 18;
    EnsureEnvRequest ensure_env_request = 19;
    EnsureEnvResponse ensure_env_response = 20;
    ParametersRequest parameters_request = 21;
    ParametersResponse parameters_response = 22;
  }
}

// The ProvisioningService definition
service ProvisioningService {
  // Bidirectional stream for provisioning requests and responses
  rpc Stream(stream ProvisioningMessage) returns (stream ProvisioningMessage);
}
